# comment-sense

./: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  vercel.json
.github/workflows/: backend_deployment.yaml  check_backend_deployment_status  check_backend_deployment_status.yaml
backend/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/api/: index.py  react_agent.py  test.py
backend/api/config/: settings.py
backend/api/database/: mongodb.py
backend/api/langgraph/: agent.py  tools.py
backend/api/models/: feedback.py  file.py  user.py
backend/api/routes/: add_langgraph_route.py  auth_routes.py  feedback_routes.py  file_routes.py  logging_routes.py
backend/api/services/: auth_service.py  document_service.py  file_service.py
backend/api/utils/: auth.py  deps.py  logger.py  textbook_loader.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/dashboard/: page.tsx
src/components/: MyAssistant.tsx
src/components/assistant-ui/: course-eval-sidebar.tsx  learn-to-use-dialog.tsx  model-selector.tsx  mythread.tsx  new-chat-dialog.tsx  thread.tsx
src/components/tools/: CourseEvaluationVectors.tsx  TeachingMaterial.tsx  ToolFallBack.tsx  WebScraping.tsx
src/components/ui/: 3d-text.tsx  auth-card.tsx  background-pattern.tsx  hero-section.tsx  navbar.tsx  progress.tsx  video-demo-dialog.tsx
src/lib/: logger.ts  utils.ts
